syntax = "proto3";
package kava.pricefeed.v1beta1;

import "kava/pricefeed/v1beta1/store.proto";
import "gogoproto/gogo.proto";

option go_package                    = "github.com/kava-labs/kava/x/pricefeed/types";
option (gogoproto.equal_all)         = true;
option (gogoproto.verbose_equal_all) = true;

// GenesisState defines the pricefeed module's genesis state.
message GenesisState {
  // params defines all the paramaters of the module.
  Params params = 1 [(gogoproto.nullable) = false];

  repeated PostedPrice posted_prices = 2 [(gogoproto.castrepeated) = "PostedPrices", (gogoproto.nullable) = false];
}
